chore: loom pinning demo.